Import of IMACAT/arclog-3.01 from CPAN.
gitpan-cpan-distribution: arclog
gitpan-cpan-version:      3.01
gitpan-cpan-path:         IMACAT/arclog-3.01.tar.gz
gitpan-cpan-author:       IMACAT
gitpan-cpan-maturity:     released

--- a/arclog.en.html
+++ b/arclog.en.html
@@ -25,7 +25,7 @@ h2, em {
     width: 0.5em;
 }
 </style>
-<title>arclog Version 3.00</title>
+<title>arclog Version 3.01</title>
 </head>
 <body>
 
@@ -45,12 +45,19 @@ h2, em {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="Page Content Area">:::</a></div>
 
-<h1><samp>arclog</samp> Version 3.00</h1>
+<h1><samp>arclog</samp> Version 3.01</h1>
 
 
 <h2>What&rsquo;s New?</h2>
 
 <dl>
+
+<dt>2007-11-28</dt>
+
+<dd>
+<p><samp>arclog</samp> version 3.01 is released.  Test suite improvement, in order to catch <abbr title="Comprehensive Perl Archive Network">CPAN</abbr> tester failures.  <a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.01.tar.gz" type="application/x-gzip">Download <samp>arclog</samp> version 3.01</a>.</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
