--- a/arclog.zh-cn.html
+++ b/arclog.zh-cn.html
@@ -28,7 +28,7 @@ q {
     quotes: "“" "”" "‘" "’";
 }
 </style>
-<title>arclog 3.00 版</title>
+<title>arclog 3.01 版</title>
 </head>
 <body>
 
@@ -48,12 +48,19 @@ q {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="网页内文区">:::</a></div>
 
-<h1><samp xml:lang="en">arclog</samp> 3.00 版</h1>
+<h1><samp xml:lang="en">arclog</samp> 3.01 版</h1>
 
 
 <h2>最新消息</h2>
 
 <dl>
+
+<dt>2007-11-28</dt>
+
+<dd>
+<p><samp xml:lang="en">arclog</samp> 最新版本 3.01 。修正测试套件，以协助厘清 <abbr title="Comprehensive Perl Archive Network">CPAN</abbr> 测试回报的错误。<a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.01.tar.gz" type="application/x-gzip">下载 <samp xml:lang="en">arclog</samp> 3.01 版</a>。</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
