--- a/arclog.zh-tw.html
+++ b/arclog.zh-tw.html
@@ -31,7 +31,7 @@ q:lang(en) {
     quotes: "\201C" "\201D" "\2018" "\2019";
 }
 </style>
-<title>arclog 3.00 版</title>
+<title>arclog 3.01 版</title>
 </head>
 <body>
 
@@ -51,12 +51,19 @@ q:lang(en) {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="網頁內文區">:::</a></div>
 
-<h1><samp xml:lang="en">arclog</samp> 3.00 版</h1>
+<h1><samp xml:lang="en">arclog</samp> 3.01 版</h1>
 
 
 <h2>最新消息</h2>
 
 <dl>
+
+<dt>2007-11-28</dt>
+
+<dd>
+<p><samp xml:lang="en">arclog</samp> 最新版本 3.01 。修正測試套件，以協助釐清 <abbr title="Comprehensive Perl Archive Network">CPAN</abbr> 測試回報的錯誤。<a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.01.tar.gz" type="application/x-gzip">下載 <samp xml:lang="en">arclog</samp> 3.01 版</a>。</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
