Import of IMACAT/arclog-3.02 from CPAN.
gitpan-cpan-distribution: arclog
gitpan-cpan-version:      3.02
gitpan-cpan-path:         IMACAT/arclog-3.02.tar.gz
gitpan-cpan-author:       IMACAT
gitpan-cpan-maturity:     released

--- a/arclog.zh-cn.html
+++ b/arclog.zh-cn.html
@@ -28,7 +28,7 @@ q {
     quotes: "“" "”" "‘" "’";
 }
 </style>
-<title>arclog 3.01 版</title>
+<title>arclog 3.02 版</title>
 </head>
 <body>
 
@@ -48,12 +48,19 @@ q {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="网页内文区">:::</a></div>
 
-<h1><samp xml:lang="en">arclog</samp> 3.01 版</h1>
+<h1><samp xml:lang="en">arclog</samp> 3.02 版</h1>
 
 
 <h2>最新消息</h2>
 
 <dl>
+
+<dt>2007-11-30</dt>
+
+<dd>
+<p><samp xml:lang="en">arclog</samp> 最新版本 3.02 。修正测试套件，以处理日光节约时间问题。<a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.02.tar.gz" type="application/x-gzip">下载 <samp xml:lang="en">arclog</samp> 3.02 版</a>。</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
@@ -489,7 +496,7 @@ q {
 
 <hr />
 <div id="footer" class="footer" title="页尾区">
-<address><a href="mailto:imacat&#64;mail.imacat.idv.tw">依玛猫</a>，初稿 2001-06-08 ，上次更新日期 2007-11-28</address>
+<address><a href="mailto:imacat&#64;mail.imacat.idv.tw">依玛猫</a>，初稿 2001-06-08 ，上次更新日期 2007-11-30</address>
 
 <address>版权所有 &copy; 2001-2007 依玛猫，欲转载引用请先阅读<a href="fdl.txt">版权声明</a>。</address>
 </div>
