--- a/arclog.en.html
+++ b/arclog.en.html
@@ -25,7 +25,7 @@ h2, em {
     width: 0.5em;
 }
 </style>
-<title>arclog Version 3.01</title>
+<title>arclog Version 3.02</title>
 </head>
 <body>
 
@@ -45,12 +45,19 @@ h2, em {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="Page Content Area">:::</a></div>
 
-<h1><samp>arclog</samp> Version 3.01</h1>
+<h1><samp>arclog</samp> Version 3.02</h1>
 
 
 <h2>What&rsquo;s New?</h2>
 
 <dl>
+
+<dt>2007-11-30</dt>
+
+<dd>
+<p><samp>arclog</samp> version 3.02 is released.  Test suite improvement, in order to deal with daylight saving time.  <a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.02.tar.gz" type="application/x-gzip">Download <samp>arclog</samp> version 3.02</a>.</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
@@ -484,7 +491,7 @@ h2, em {
 
 <hr />
 <div id="footer" class="footer" title="Page Footer Area">
-<address>By <a href="mailto:imacat&#64;mail.imacat.idv.tw">imacat</a>, first version 2001-06-08, last updated 2007-11-28</address>
+<address>By <a href="mailto:imacat&#64;mail.imacat.idv.tw">imacat</a>, first version 2001-06-08, last updated 2007-11-30</address>
 
 <address>Copyright &copy; 2001-2007 imacat.  Please read the <a href="fdl.txt">copyright</a> before copying.</address>
 </div>
