--- a/arclog.zh-tw.html
+++ b/arclog.zh-tw.html
@@ -31,12 +31,12 @@ q:lang(en) {
     quotes: "\201C" "\201D" "\2018" "\2019";
 }
 </style>
-<title>arclog 3.01 版</title>
+<title>arclog 3.02 版</title>
 </head>
 <body>
 
 <div class="langs" title="語言切換區">
-    <span>繁體中文</span> |
+    <span>正體中文</span> |
     <span xml:lang="zh-cn"><a href="arclog.zh-cn.html"
         title="切&#25442;到本&#39029;的&#31616;体中文版。"
         hreflang="zh-cn">&#31616;体中文</a></span> |
@@ -51,12 +51,19 @@ q:lang(en) {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="網頁內文區">:::</a></div>
 
-<h1><samp xml:lang="en">arclog</samp> 3.01 版</h1>
+<h1><samp xml:lang="en">arclog</samp> 3.02 版</h1>
 
 
 <h2>最新消息</h2>
 
 <dl>
+
+<dt>2007-11-30</dt>
+
+<dd>
+<p><samp xml:lang="en">arclog</samp> 最新版本 3.02 。修正測試套件，以處理日光節約時間問題。<a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.02.tar.gz" type="application/x-gzip">下載 <samp xml:lang="en">arclog</samp> 3.02 版</a>。</p>
+</dd>
+
 
 <dt>2007-11-28</dt>
 
@@ -492,7 +499,7 @@ q:lang(en) {
 
 <hr />
 <div id="footer" class="footer" title="頁尾區">
-<address><a href="mailto:imacat&#64;mail.imacat.idv.tw">依瑪貓</a>，初稿 2001-06-08 ，上次更新日期 2007-11-28</address>
+<address><a href="mailto:imacat&#64;mail.imacat.idv.tw">依瑪貓</a>，初稿 2001-06-08 ，上次更新日期 2007-11-30</address>
 
 <address>版權所有 &copy; 2001-2007 依瑪貓，欲轉載引用請先閱讀<a href="fdl.txt">版權聲明</a>。</address>
 </div>
