--- a/arclog.zh-cn.html
+++ b/arclog.zh-cn.html
@@ -28,7 +28,7 @@ q {
     quotes: "“" "”" "‘" "’";
 }
 </style>
-<title>arclog 3.02 版</title>
+<title>arclog 3.04 版</title>
 </head>
 <body>
 
@@ -48,12 +48,19 @@ q {
 <div class="accessguide"><a accesskey="C"
     href="#body" title="网页内文区">:::</a></div>
 
-<h1><samp xml:lang="en">arclog</samp> 3.02 版</h1>
+<h1><samp xml:lang="en">arclog</samp> 3.04 版</h1>
 
 
 <h2>最新消息</h2>
 
 <dl>
+
+<dt>2007-12-03</dt>
+
+<dd>
+<p><samp xml:lang="en">arclog</samp> 最新版本 3.04 。说明文件修正。若你之前安装了 <samp xml:lang="en">arclog</samp> 3.00 版或之后的版本，不需要安装新版。<a href="ftp://ftp.imacat.idv.tw/pub/arclog/arclog-3.04.tar.gz" type="application/x-gzip">下载 <samp xml:lang="en">arclog</samp> 3.04 版</a>。</p>
+</dd>
+
 
 <dt>2007-12-03</dt>
 
@@ -109,9 +116,9 @@ q {
 
 <h2>说明</h2>
 
-<p><samp xml:lang="en">arclog</samp> 是记录档每月归档程式，将记录档中，前月的记录按月份压缩归档，以节省硬碟空间，并避免记录档被有心人士破坏。</p>
+<p><dfn xml:lang="en"><samp>arclog</samp></dfn> 是记录档每月归档程式，将记录档中，前月的记录按月份压缩归档，以节省硬碟空间，并避免记录档被有心人士破坏。</p>
 
-<p><samp xml:lang="en">arclog</samp> 目前支援 <a href="http://httpd.apache.org/" hreflang="en" xml:lang="en">Apache</a> 、 <span xml:lang="en">Syslog</span> 、 <a href="http://www.ntp.org/" hreflang="en" xml:lang="en"><abbr title="network time protocol">NTP</abbr></a> 、 <span xml:lang="en">Apache 1 <abbr title="secure socket layer">SSL</abbr> engine log</span> 及我自己用的括弧 <acronym title="International Organization for Standardization" xml:lang="en">ISO</acronym> 修正格式五种格式的记录档，与 <samp xml:lang="en">gzip</samp> 和 <samp xml:lang="en">bzip2</samp> 两种压缩法。</p>
+<p><samp xml:lang="en">arclog</samp> 目前支援 <a href="http://httpd.apache.org/" hreflang="en" xml:lang="en">Apache</a> 、 <span xml:lang="en">Syslog</span> 、 <a href="http://www.ntp.org/" hreflang="en" xml:lang="en"><abbr title="network time protocol">NTP</abbr></a> 、 <span xml:lang="en">Apache 1 <abbr title="secure socket layer">SSL</abbr> engine log</span> 及我自己用的括弧 <acronym title="International Organization for Standardization" xml:lang="en">ISO</acronym> 修正格式五种格式的记录档，与 <samp xml:lang="en">gzip</samp> 和 <samp xml:lang="en">bzip2</samp> 两种压缩法。很多程式都可以用 <span xml:lang="en">Apache</span> 相容记录档格式记录，如 <a href="http://www.cups.org/" hreflang="en" xml:lang="en"><abbr title="Common UNIX Printing System">CUPS</abbr></a> 、 <a href="http://www.proftpd.org/" hreflang="en" xml:lang="en">ProFTPD</a> 、 <a href="http://www.pureftpd.org/" hreflang="en" xml:lang="en">Pure-FTPd</a>&hellip;等， <samp xml:lang="en">arclog</samp> 也可以归档这些 <span xml:lang="en">Apache</span> 相容格式的记录档。</p>
 
 
 <h2>注意事项</h2>
